# --241-1sem

./: .gitignore
List/: List.sln
List/List/: List.vcxproj  main.cpp
List/Solver/: CircularLinkedList.cpp  CircularLinkedList.h  Node.h  Solver.vcxproj  Solver.vcxproj.filters
List/Tests/: Tests.vcxproj  test.cpp
Massive/: Massive.sln
Massive/Massive/: Massive.vcxproj  main.cpp
Massive/Solver/: ExerciseVirtual.cpp  ExerciseVirtual.h  Generator.h  IStreamGenerator.cpp  IStreamGenerator.h  Matrix.cpp  Matrix.h  MyExercise.cpp  MyExercise.h  RandomGenerator.cpp  RandomGenerator.h  Solver.vcxproj  Solver.vcxproj.filters  resource.h
Massive/Tests/: Tests.vcxproj
Policlinic/: CMakeLists.txt  Policlinic.sln
Policlinic/Policlinic/: Policlinic.vcxproj  main.cpp
Policlinic/Solver/: Clinic.cpp  Clinic.h  Doctor.cpp  Doctor.h  Patient.cpp  Patient.h  Schedule.cpp  Schedule.h  Solver.vcxproj  Solver.vcxproj.filters
Policlinic/Solver.Test/: Solver.Test.vcxproj  Test.cpp
Policlinica/: Policlinica.sln
Policlinica/Policlinica/: Policlinica.vcxproj  main.cpp
Policlinica/Solver/: Doctor.cpp  Doctor.h  Patient.cpp  Patient.h  Schedule.cpp  Schedule.h  Solver.vcxproj  Solver.vcxproj.filters
Policlinica/Test/: Test.vcxproj  test.cpp
Policlinica/Tests/: DoctorTest.cpp  PatientTest.cpp  ScheduleTest.cpp  Tests.vcxproj  Tests.vcxproj.filters
polyclinic/: polyclinic.sln
polyclinic/Demo/: Demo.vcxproj
polyclinic/Solver/: Solver.vcxproj  Solver.vcxproj.filters
polyclinic/Solver.Test/: Solver.Test.vcxproj
